--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,10 @@
+.footer{
+  bottom:0;
+  width:100%;
+  height: 40px;
+  background-color: black;
+  position:absolute; 
+}
 .App {
   text-align: center;
 }
